--- a/13_ready_check.html
+++ b/13_ready_check.html
@@ -162,28 +162,30 @@
         <div class="col-12 mt-2">
           <div class="card shadow-sm ">
             <div class="card-body table-responsive-md">
-              <table class="table ">
-                <thead>
-                  <tr class="bg-light thead-style">
-                    <th scope="col">項次</th>
-                    <th scope="col">年度</th>
-                    <th scope="col">備查申請日期</th>
-                    <th scope="col">備查完成日期</th>
-                    <th scope="col">操作</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td scope="row">1</td>
-                    <td>108年</td>
-                    <td>12019/01/03</td>
-                    <td>2019/01/15</td>
-                    <td>
-                      <a href="#" class="btn btn-primary table-btn">檢視</a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+              <form action="">
+                <table class="table ">
+                  <thead>
+                    <tr class="bg-light thead-style">
+                      <th scope="col">項次</th>
+                      <th scope="col">年度</th>
+                      <th scope="col">備查申請日期</th>
+                      <th scope="col">備查完成日期</th>
+                      <th scope="col">操作</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td scope="row">1</td>
+                      <td>108年</td>
+                      <td>12019/01/03</td>
+                      <td>2019/01/15</td>
+                      <td>
+                        <button class="btn btn-primary table-btn">檢視</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </form>
             </div>
           </div>
         </div>
