--- a/11_application_and_check.html
+++ b/11_application_and_check.html
@@ -169,50 +169,52 @@
         <div class="col-12 mt-2">
           <div class="card shadow-sm ">
             <div class="card-body table-responsive">
-              <table class="table ">
-                <thead>
-                  <tr class="bg-light thead-style">
-                    <th scope="col">項次</th>
-                    <th scope="col">呈報案號</th>
-                    <th scope="col">呈報申請日期</th>
-                    <th scope="col">呈報完成日期</th>
-                    <th scope="col">辦理階段</th>
-                    <th scope="col">申請人</th>
-                    <th scope="col">申請人Email</th>
-                    <th scope="col">操作</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td scope="row">1</td>
-                    <td>A010711A000212</td>
-                    <td>2018/11/20</td>
-                    <td>2018/11/23</td>
-                    <td>待審查中</td>
-                    <td>王小明</td>
-                    <td>tseng_kuo_ching@hotmail.com
-                    </td>
-                    <td class="d-xl-flex justify-content-end check-td-btn">
-                      <a href="#" class="btn btn-primary ">檢視</a>
-                      <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">撤銷</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td scope="row">1</td>
-                    <td>A010711A000212</td>
-                    <td>2018/11/20</td>
-                    <td>2018/11/23</td>
-                    <td>待審查中</td>
-                    <td>王小明</td>
-                    <td>tseng_kuo_ching@hotmail.com
-                    </td>
-                    <td class="d-xl-flex justify-content-end check-td-btn">
-                      <a href="#" class="btn btn-primary ">補正(件)處理</a>
-                      <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">撤銷</a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+              <form action="">
+                <table class="table ">
+                  <thead>
+                    <tr class="bg-light thead-style">
+                      <th scope="col">項次</th>
+                      <th scope="col">呈報案號</th>
+                      <th scope="col">呈報申請日期</th>
+                      <th scope="col">呈報完成日期</th>
+                      <th scope="col">辦理階段</th>
+                      <th scope="col">申請人</th>
+                      <th scope="col">申請人Email</th>
+                      <th scope="col">操作</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td scope="row">1</td>
+                      <td>A010711A000212</td>
+                      <td>2018/11/20</td>
+                      <td>2018/11/23</td>
+                      <td>待審查中</td>
+                      <td>王小明</td>
+                      <td>tseng_kuo_ching@hotmail.com
+                      </td>
+                      <td class="d-xl-flex justify-content-end check-td-btn">
+                        <button class="btn btn-primary ">檢視</button>
+                        <button class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">撤銷</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td scope="row">1</td>
+                      <td>A010711A000212</td>
+                      <td>2018/11/20</td>
+                      <td>2018/11/23</td>
+                      <td>待審查中</td>
+                      <td>王小明</td>
+                      <td>tseng_kuo_ching@hotmail.com
+                      </td>
+                      <td class="d-xl-flex justify-content-end check-td-btn">
+                        <button class="btn btn-primary ">補正(件)處理</button>
+                        <button class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">撤銷</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </form>
             </div>
           </div>
         </div>
@@ -231,21 +233,21 @@
               <span aria-hidden="true" class="text-light">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-            <form>
+          <form>
+            <div class="modal-body">
               <div class="form-group">
                 <textarea rows="8" cols="50" class="form-control" id="message-text"></textarea>
               </div>
-            </form>
-            <span class="text-danger">
-              說明 :
-              輸入說明內容字數限制200中、英文字
-            </span>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary">確定</button>
-          </div>
+              <span class="text-danger">
+                說明 :
+                輸入說明內容字數限制200中、英文字
+              </span>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+              <button type="button" class="btn btn-primary">確定</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
