--- a/14_password.html
+++ b/14_password.html
@@ -104,44 +104,46 @@
   <div class="container ">
     <div class="pt-3 pb-5">
       <h2 class="title text-primary pt-3">修改密碼</h2>
-      <div class="row justify-content-center pb-4 pt-4">
-        <div class="col-md-7">
-          <div class="card shadow-sm bg-light">
-            <div class="card-body card-table signin-card">
-              <div class="row">
-                <div class="col text-danger">註 : * 為必填(選)欄位，不能為空白</div>
+      <form action="">
+        <div class="row justify-content-center pb-4 pt-4">
+          <div class="col-md-7">
+            <div class="card shadow-sm bg-light">
+              <div class="card-body card-table signin-card">
+                <div class="row">
+                  <div class="col text-danger">註 : * 為必填(選)欄位，不能為空白</div>
+                </div>
+                <div class="mt-3 form-style">
+                  <div class="row mb-3 signin-box-border">
+                    <label for="" class="form-title col-sm-3">帳號</label>
+                    <div class="col-sm-9 d-flex">
+                      <span>A12345678</span>
+                    </div>
+                  </div>
+                  <div class="row mb-3 signin-box-border">
+                    <label for="" class="form-title col-sm-3 ">
+                      <span class="text-danger">*</span> 新密碼</label>
+                    <div class="col-sm-9 ">
+                      <input type="password" class="form-control">
+                    </div>
+                  </div>
+                  <div class="row mb-3 signin-box-border">
+                    <label for="" class="form-title col-sm-3 ">
+                      <span class="text-danger">*</span> 新密碼確認
+                    </label>
+                    <div class="col-sm-9">
+                      <input type="password" class="form-control">
+                    </div>
+                  </div>
+                </div>
               </div>
-              <form class="mt-3 form-style">
-                <div class="row mb-3 signin-box-border">
-                  <label for="" class="form-title col-sm-3">帳號</label>
-                  <div class="col-sm-9 d-flex">
-                    <span>A12345678</span>
-                  </div>
-                </div>
-                <div class="row mb-3 signin-box-border">
-                  <label for="" class="form-title col-sm-3 ">
-                    <span class="text-danger">*</span> 新密碼</label>
-                  <div class="col-sm-9 ">
-                    <input type="password" class="form-control">
-                  </div>
-                </div>
-                <div class="row mb-3 signin-box-border">
-                  <label for="" class="form-title col-sm-3 ">
-                    <span class="text-danger">*</span> 新密碼確認
-                  </label>
-                  <div class="col-sm-9">
-                    <input type="password" class="form-control">
-                  </div>
-                </div>
-              </form>
             </div>
           </div>
         </div>
-      </div>
-      <div class="d-flex justify-content-center mb-4">
-        <a href="#" class="btn bg-secondary list-btn mr-1 ml-1">清除</a>
-        <a href="#" class="btn btn-primary list-btn mr-1 ml-1">變更密碼</a>
-      </div>
+        <div class="d-flex justify-content-center mb-4">
+          <buton class="btn bg-secondary list-btn mr-1 ml-1">清除</buton>
+          <buton class="btn btn-primary list-btn mr-1 ml-1">變更密碼</buton>
+        </div>
+      </form>
     </div>
   </div>
   <footer class="bg-primary footer-bg p-4 ">
