fixed css and html input

--- a/14_password.html
+++ b/14_password.html
@@ -122,7 +122,7 @@
                   <div class="row mb-3 signin-box-border">
                     <label for="" class="form-title col-sm-3 ">
                       <span class="text-danger">*</span> 新密碼</label>
-                    <div class="col-sm-9 ">
+                    <div class="col-sm-9 mb-3">
                       <input type="password" class="form-control">
                     </div>
                   </div>
@@ -130,7 +130,7 @@
                     <label for="" class="form-title col-sm-3 ">
                       <span class="text-danger">*</span> 新密碼確認
                     </label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <input type="password" class="form-control">
                     </div>
                   </div>
