--- a/15_basic_information.html
+++ b/15_basic_information.html
@@ -117,14 +117,14 @@
                     <label for="" class="form-title col-sm-3">
                       <span class="text-danger">*</span> 中文姓名
                     </label>
-                    <div class="col-sm-9 d-flex">
+                    <div class="col-sm-9 d-flex mb-3">
                       <input type="text" class="form-control" placeholder="楊過">
                     </div>
                   </div>
                   <div class="row mb-3 form-border">
                     <label for="" class="form-title col-sm-3">
                       <span class="text-danger">*</span> 出生日期（西元）</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <input type="" class="form-control" placeholder="1983/11/01">
                     </div>
                   </div>
@@ -155,20 +155,20 @@
                   </div>
                   <div class="row mb-3 form-border">
                     <label for="" class="form-title col-sm-3"><span class="text-danger">*</span> 電子郵件</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <input type="text" class="form-control" placeholder="tseng_kuo_ching@hotmail.com">
                     </div>
                   </div>
                   <div class="row mb-3 form-border">
                     <label for="" class="form-title col-sm-3"><span class="text-danger">*</span> 身分證號/外來人口統一證號</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <input type="text" placeholder="A123456789" class="form-control">
                     </div>
                   </div>
                   <div class="row mb-3 form-border">
                     <label for="" class="form-title col-sm-3">
                       <span class="text-danger">*</span> 聯絡電話</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <div class="form-row mb-2">
                         <div class="col-4"><input type="tel" class="form-control"></div>
                         <div>-</div>
@@ -183,7 +183,7 @@
                   <div class="row mb-3 form-border">
                     <label class="form-title col-sm-3">
                       <span class="text-danger">*</span> 居住地址</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <div class="form-row mb-2">
                         <div class="col-md-4 my-1 mb-3">
                           <select class="custom-select mr-sm-2">
@@ -316,7 +316,7 @@
                     <label for="" class="form-title col-sm-3">
                       <span class="text-danger">*</span> 董事長姓名
                     </label>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 mb-3">
                       <input type="text" placeholder="王小明" class="form-control" id="">
                     </div>
                   </div>
@@ -324,14 +324,14 @@
                     <label for="" class="form-title col-sm-3">
                       <span class="text-danger">*</span> 財團法人電子郵件
                     </label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <input type="text" placeholder="test1@gmail.com" class="form-control" id="inputEmail3">
                     </div>
                   </div>
                   <div class="form row mb-3 form-border">
                     <label class="form-title col-sm-3">
                       <span class="text-danger">*</span> 財團法人聯絡電話</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <div class="form-row mb-2">
                         <div class="col-4"><input type="tel" placeholder="02" class="form-control"></div>
                         <div>-</div>
@@ -343,10 +343,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form row mb-3">
+                  <div class="form row ">
                     <label class="form-title col-sm-3">
                       <span class="text-danger">*</span> 財團法人地址</label>
-                    <div class="col-sm-9">
+                    <div class="col-sm-9 mb-3">
                       <div class="form-row mb-2">
                         <div class="col-md-4 my-1 mb-3">
                           <select class="custom-select mr-sm-2">
