--- a/16_work_report.html
+++ b/16_work_report.html
@@ -212,14 +212,14 @@
                   <div class="form-group row form-border">
                     <label class="col-sm-4 col-form-label form-title">
                       <span class="text-danger">*</span> 申請人姓名</label>
-                    <div class="col-sm-8">
-                      <input type="password" placeholder="王小明" class="form-control" id="">
+                    <div class="col-sm-8 mb-3">
+                      <input type="text" placeholder="王小明" class="form-control" id="">
                     </div>
                   </div>
                   <div class="form-group row form-border">
                     <label class="col-sm-4 col-form-label form-title">
                       <span class="text-danger">*</span> 申請人聯絡電話</label>
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 mb-3">
                       <div class="form-row mb-2">
                         <div class="col-4"><input type="tel" class="form-control" placeholder="02"></div>
                         <div>-</div>
@@ -234,9 +234,9 @@
                   <div class="form-group row form-border">
                     <label class="col-sm-4 col-form-label form-title"><span class="text-danger">*</span>
                       申請人Email</label>
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 mb-3">
                       <input type="text" class="form-control" placeholder="tseng_kuo_ching@hotmail.com">
-                      <div class="text-danger alert-bg">
+                      <div class="text-danger alert-bg mt-2">
                         注意 : 申請人不得使用大陸地區郵件帳號作為回覆郵件位址(例如qq.cn或xxx.cn等相關
                         大陸email)。email為聯繫及系統寄發案件審理通知訊息主要方式，請務必提供正確email
                         資訊，以免影響審核進度。
@@ -253,7 +253,7 @@
                         工作計畫及經費預算應敘明計畫重點、<br /> 經費預算、預期效益及收支營運預計表。
                       </div>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 file-upload-input">
                       <div class="text-info alert-bg">注意 : <br />1.
                         檔案格式為JPG|JPEG|PNG|BMP|PDF，上傳的文件須清晰，不能加上任何字句或圖樣，如：影印本/COPY等。<br />2. 檔案請小於1024K。<br />3.
                         應檢附文件請依原資料大小掃描後上傳。
