--- a/21_notice_cp2.html
+++ b/21_notice_cp2.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="stylesheets/all.css" />
-  <title>送件成功資訊頁</title>
+  <link rel="stylesheet" href="stylesheets/info.css" />
+  <title>工作計畫及經費預算備查申請-行政公告資訊列表頁</title>
 </head>
 
 <body>
@@ -49,8 +50,7 @@
         </div>
       </div>
       <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav primary-navbar-nav">
@@ -101,42 +101,66 @@
   </div>
 </div>
 </nav>
+
 <div class="container ">
-  <div class="pt-3 pb-5">
-    <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請及查詢</h2>
+  <div class=" pt-3 pb-5">
+    <h2 class="title text-primary pt-3">公告內容</h2>
     <div class="row pb-4 pt-4">
-      <div class="col-12">
-        <div class="card-header bg-primary text-white mb-3">
-          新增工作計畫及經費預算備查
-        </div>
-      </div>
       <div class="col-12">
         <div class="card shadow-sm ">
           <div class="card-body card-table">
             <table class="table-style">
               <tbody class="">
                 <tr class="row">
-                  <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                    申請項目
+                  <th for="" class="col-sm-3 table-title pb-3 pt-3 ">
+                    公告標題
                   </th>
-                  <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
-                    <span>工作計畫及經費預算備查</span>
+                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                    <span>財團法人臺灣建築中心查核報告</span>
                   </td>
                 </tr>
                 <tr class="row">
-                  <th class="col-sm-4 table-title pb-3 pt-3 ">
-                    申請結果
+                  <th class="col-sm-3 table-title pb-3 pt-3 ">
+                    公告日期
                   </th>
-                  <td class="col-sm-8 d-flex align-items-center text-danger pb-3 pt-3 ">
-                    <span>您的工作計畫及經費預算備查申請已完成線上送件，目前正由主管機關審核人員審閱辦理中。</span>
+                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                    107年1月25日
                   </td>
                 </tr>
                 <tr class="row">
-                  <th class="col-sm-4 table-title pb-3 pt-3 ">
-                    送件號碼
+                  <th class="col-sm-3 table-title pb-3 pt-3 ">
+                    公告內容
                   </th>
-                  <td class="col-sm-8 d-flex align-items-center text-danger pb-3 pt-3 ">
-                    <span>A010711A000202</span>
+                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                    查核報告
+                  </td>
+                </tr>
+                <tr class="row">
+                  <th class="col-sm-3 table-title pb-3 pt-3 ">
+                    公告單位
+                  </th>
+                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                    財團法人臺灣營建研究院
+                  </td>
+                </tr>
+                <tr class="row">
+                  <th class="col-sm-3 table-title pb-3 pt-3 ">
+                    公告範圍 
+                  </th>
+                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                    行政公告
+                  </td>
+                </tr>
+                <tr class="row">
+                  <th class="col-sm-3 table-title pb-3 pt-3 ">
+                    公告附件（查核報告）
+                  </th>
+                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                    <ul>
+                      <li><a href="">107年查核報告1.pdf</a></li>
+                      <li><a href="">107年查核報告2.pdf</a></li>
+                      <li><a href="">107年查核報告3.pdf</a></li>
+                    </ul>
                   </td>
                 </tr>
               </tbody>
@@ -146,10 +170,11 @@
       </div>
     </div>
     <div class="d-flex justify-content-center mb-4">
-      <button class="btn btn-primary list-btn">返回</button>
+      <a href="#" class="btn btn-secondary list-btn">回上一頁</a>
     </div>
   </div>
 </div>
+
 <footer class="bg-primary footer-bg p-4 ">
   <div class="container">
     <div class="row">
